--- a/PE_PRN222_SP25_TrialTest/PharmaceuticalManagement_NguyenHuuPhuc/Pages/Medical/Index.cshtml
+++ b/PE_PRN222_SP25_TrialTest/PharmaceuticalManagement_NguyenHuuPhuc/Pages/Medical/Index.cshtml
@@ -7,31 +7,28 @@
 
 <h1>Index</h1>
 
-
-<form method="get" asp-page="./Index">
-    <div class="row">
+<form method="get">
+    <div class="row g-3">
         <div class="col-md-3">
-            <div class="form-group">
-                <label class="control-label">ActiveIngredients</label>
-                <input type="text" name="active" value=@Model.Active class="form-control" />
+            <div class="form-floating">
+                <input asp-for="Active" class="form-control" placeholder="Active Ingredients" />
+                <label asp-for="Active">Active Ingredients</label>
             </div>
         </div>
         <div class="col-md-3">
-            <div class="form-group">
-                <label class="control-label">ExpirationDate</label>
-                <input type="text" name="expire" value=@Model.Expire class="form-control" />
+            <div class="form-floating">
+                <input asp-for="Expire" class="form-control" placeholder="Expiration Date" />
+                <label asp-for="Expire">Expiration Date</label>
             </div>
         </div>
         <div class="col-md-3">
-            <div class="form-group">
-                <label class="control-label">WarningsAndPrecautions</label>
-                <input type="text" name="warn" value=@Model.Warn class="form-control" />
+            <div class="form-floating">
+                <input asp-for="Warn" class="form-control" placeholder="Warnings and Precautions" />
+                <label asp-for="Warn">Warnings and Precautions</label>
             </div>
         </div>
-        <div class="col-md-3 mt-4">
-            <div class="form-group">
-                <input type="submit" value="Search" class="btn btn-success" />
-            </div>
+        <div class="col-md-3 d-flex align-items-end">
+            <button type="submit" class="btn btn-success w-100">Search</button>
         </div>
     </div>
 </form>
