--- a/SP25_PRN222_NET1710_ASM2_SE183026_PhucNH/PsychologyHealthCare.RazorWebApp/Pages/AppointmentTrackings/Create.cshtml
+++ b/SP25_PRN222_NET1710_ASM2_SE183026_PhucNH/PsychologyHealthCare.RazorWebApp/Pages/AppointmentTrackings/Create.cshtml
@@ -86,7 +86,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" id="createButton" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
