--- a/SP25_PRN222_NET1710_ASM2_SE183026_PhucNH/PsychologyHealthCare.RazorWebApp/Pages/AppointmentTrackings/Delete.cshtml
+++ b/SP25_PRN222_NET1710_ASM2_SE183026_PhucNH/PsychologyHealthCare.RazorWebApp/Pages/AppointmentTrackings/Delete.cshtml
@@ -45,10 +45,10 @@
         <dd class="col-sm-10">@Html.DisplayFor(model => model.AppointmentTracking.ProgramTrackingId)</dd>
     </dl>
 
-    <form asp-action="Delete">
+    <form method="post">
         <input type="hidden" asp-for="AppointmentTracking.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+        <input type="submit" id="deleteButton" value="Delete" class="btn btn-danger" />
+        <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
